--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <nav class="fixed w-full z-50 glass transition-all duration-300" id="navbar">
         <div class="max-w-7xl mx-auto px-0 sm:px-0 lg:px-0">
             <div class="flex justify-between items-center h-20">
-                <a href="index.html" class="flex-shrink-0 flex items-center gap-3" aria-label="RC Digital Creations Home">
-                    <img src="images/RC Digital Creations.png" alt="RC Digital Creations Logo" class="h-20 w-20 object-contain drop-shadow-[0_0_18px_rgba(59,130,246,0.6)]">
-                    <span class="font-bold tracking-tight text-white brand-font block text-base md:text-2xl">RC <span class="text-brand-blue">Digital</span> Creations</span>
+                <a href="index.html" class="flex items-center gap-2 md:gap-3 min-w-0" aria-label="RC Digital Creations Home">
+                    <img src="images/RC Digital Creations.png" alt="RC Digital Creations Logo" class="h-12 w-12 md:h-20 md:w-20 object-contain drop-shadow-[0_0_18px_rgba(59,130,246,0.6)]">
+                    <span class="font-bold tracking-tight text-white brand-font block text-base sm:text-lg md:text-2xl">RC <span class="text-brand-blue">Digital</span> Creations</span>
                 </a>
                 
                 <div class="hidden md:flex items-center space-x-8">
@@ -74,7 +74,7 @@
                     </a>
                 </div>
 
-                <div class="md:hidden flex items-center">
+                <div class="md:hidden flex items-center mr-2 sm:mr-3">
                     <button id="mobile-menu-btn" class="text-white hover:text-brand-blue focus:outline-none">
                         <i data-feather="menu" class="h-8 w-8"></i>
                     </button>
@@ -93,13 +93,13 @@
         </div>
     </nav>
 
-    <section class="relative pt-16 pb-20 lg:pt-20 lg:pb-32 overflow-hidden">
+    <section class="relative pt-24 md:pt-32 lg:pt-40 pb-20 lg:pb-32 overflow-hidden">
         <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[500px] h-[500px] bg-brand-blue opacity-20 blur-[120px] rounded-full pointer-events-none"></div>
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10 text-center">
             <div data-aos="fade-up" data-aos-duration="1000">
-                <h1 class="text-6xl md:text-7xl lg:text-8xl font-bold tracking-tight mb-6 leading-tight">
-                    We Build <span class="nav-gradient">Digital Experiences</span><br> That Grow Business.
+                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold tracking-tight mb-6 leading-tight">
+                    <span class="nav-gradient">Digital Experiences</span> Engineered for Business Growth.
                 </h1>
                 <p class="mt-4 text-2xl text-gray-400 max-w-3xl mx-auto mb-10 font-light">
                     From high-performance websites to custom AI chatbots and brand identity. We combine creativity with technical precision.
@@ -194,6 +194,9 @@
                                 Visit Site <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
                             </a>
                         </div>
+                        <div class="md:hidden p-3 text-center">
+                            <a href="https://albertiniapavers.co.za/" target="_blank" class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors">Visit Website <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i></a>
+                        </div>
                     </div>
 
                     <div class="project-item web group relative rounded-xl overflow-hidden glass border-0" data-aos="fade-up">
@@ -206,6 +209,9 @@
                             <a href="https://ccautorepairs.netlify.app/" target="_blank" class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors">
                                 Visit Site <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
                             </a>
+                        </div>
+                        <div class="md:hidden p-3 text-center">
+                            <a href="https://ccautorepairs.netlify.app/" target="_blank" class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors">Visit Website <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i></a>
                         </div>
                     </div>
 
@@ -220,6 +226,9 @@
                                 Visit Site <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
                             </a>
                         </div>
+                        <div class="md:hidden p-3 text-center">
+                            <a href="https://nailsbywilma.netlify.app" target="_blank" class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors">Visit Website <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i></a>
+                        </div>
                     </div>
 
                     <div class="project-item web group relative rounded-xl overflow-hidden glass border-0" data-aos="fade-up">
@@ -232,6 +241,9 @@
                             <a href="https://ruancoetzee.co.za/" target="_blank" class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors">
                                 Visit Site <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
                             </a>
+                        </div>
+                        <div class="md:hidden p-3 text-center">
+                            <a href="https://ruancoetzee.co.za/" target="_blank" class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors">Visit Website <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i></a>
                         </div>
                     </div>
 
@@ -345,6 +357,9 @@
                             <a href="https://debrakke.netlify.app/" target="_blank" class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors">
                                 Visit Site <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
                             </a>
+                        </div>
+                        <div class="md:hidden p-3 text-center">
+                            <a href="https://debrakke.netlify.app/" target="_blank" class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors">Visit Website <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i></a>
                         </div>
                     </div>
 
