Update contact details: email info@rcdigitalcreations.co.za, phone 0634733098; update WhatsApp links and schema metadata

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           {
             "@type": "ContactPoint",
             "contactType": "customer service",
-            "telephone": "+27-78-899-8305",
-            "email": "ruan.coetzee2@gmail.com"
+            "telephone": "+27-63-473-3098",
+            "email": "info@rcdigitalcreations.co.za"
           }
         ]
       }
@@ -1225,7 +1225,7 @@
           >
             <div class="flex items-center gap-3 text-gray-300">
               <a
-                href="https://wa.me/27888998305?text=Hi%20Ruan%2C%20I%27d%20like%20to%20discuss%20a%20project."
+                href="https://wa.me/27634733098?text=Hi%20Ruan%2C%20I%27d%20like%20to%20discuss%20a%20project."
                 target="_blank"
                 rel="noopener"
                 class="group relative p-3 rounded-full bg-[#25D366] inline-flex items-center justify-center hover:brightness-110 icon-neon icon-neon-green"
@@ -1248,7 +1248,7 @@
                 >
               </a>
               <a
-                href="tel:+27788998305"
+                href="tel:+27634733098"
                 class="group relative p-3 rounded-full bg-gray-800 text-brand-blue inline-flex items-center justify-center icon-neon icon-neon-blue"
                 aria-label="Call Ruan"
               >
@@ -1258,13 +1258,13 @@
                   >Call us</span
                 >
               </a>
-              <a href="tel:+27788998305" class="hover:text-white"
-                >078 899 8305</a
+              <a href="tel:+27634733098" class="hover:text-white"
+                >063 473 3098</a
               >
             </div>
             <div class="flex items-center gap-3 text-gray-300">
               <a
-                href="mailto:ruan.coetzee2@gmail.com"
+                href="mailto:info@rcdigitalcreations.co.za"
                 class="group relative p-3 rounded-full bg-gray-800 text-brand-purple inline-flex items-center justify-center icon-neon icon-neon-purple"
                 aria-label="Email Ruan"
               >
@@ -1274,8 +1274,10 @@
                   >Email us</span
                 >
               </a>
-              <a href="mailto:ruan.coetzee2@gmail.com" class="hover:text-white"
-                >ruan.coetzee2@gmail.com</a
+              <a
+                href="mailto:info@rcdigitalcreations.co.za"
+                class="hover:text-white"
+                >info@rcdigitalcreations.co.za</a
               >
             </div>
           </div>
@@ -1342,7 +1344,7 @@
                   name="phone"
                   pattern="[0-9+\-()\s]{7,}"
                   class="w-full bg-gray-900/50 border border-gray-700 rounded-lg px-4 py-3 text-white focus:outline-none focus:border-brand-blue focus:ring-1 focus:ring-brand-blue transition-colors"
-                  placeholder="078 899 8305"
+                  placeholder="063 473 3098"
                 />
               </div>
             </div>
@@ -1408,7 +1410,7 @@
         </div>
         <div class="flex gap-6 text-gray-500">
           <a
-            href="https://wa.me/27888998305?text=Hi%20Ruan%2C%20I%27d%20like%20to%20discuss%20a%20project."
+            href="https://wa.me/27634733098?text=Hi%20Ruan%2C%20I%27d%20like%20to%20discuss%20a%20project."
             target="_blank"
             rel="noopener"
             class="group relative p-3 rounded-full bg-[#25D366] inline-flex items-center justify-center hover:brightness-110 icon-neon icon-neon-green"
@@ -1431,7 +1433,7 @@
             >
           </a>
           <a
-            href="tel:+27788998305"
+            href="tel:+27634733098"
             class="group relative p-3 rounded-full bg-gray-800 text-brand-blue inline-flex items-center justify-center btn-outline-purple btn-pop icon-neon icon-neon-blue"
             aria-label="Call Ruan"
           >
@@ -1442,7 +1444,7 @@
             >
           </a>
           <a
-            href="mailto:ruan.coetzee2@gmail.com"
+            href="mailto:info@rcdigitalcreations.co.za"
             class="group relative p-3 rounded-full bg-brand-purple inline-flex items-center justify-center hover:brightness-110 icon-neon icon-neon-purple"
             aria-label="Email Ruan"
           >
