--- a/index.html
+++ b/index.html
@@ -1455,6 +1455,11 @@
             >
           </a>
         </div>
+        <div class="mt-6 flex items-center gap-3 text-gray-500 text-sm">
+          <a href="terms.html" class="hover:text-white">Terms &amp; Conditions</a>
+          <span class="text-gray-700">•</span>
+          <a href="privacy.html" class="hover:text-white">Privacy Policy</a>
+        </div>
       </div>
     </footer>
 
