--- a/chat-widget.html
+++ b/chat-widget.html
@@ -106,7 +106,7 @@ CORE SERVICES:
         type="text"
         id="user-input"
         placeholder="Type your message..."
-        class="flex-grow p-3 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-brand-blue transition duration-150"
+        class="flex-grow p-3 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-brand-blue transition duration-150 bg-white text-gray-900 placeholder-gray-500"
       />
       <button
         id="send-button"
