Chatbot training: add portfolio links, services page reference, and FAQs; maintain formatting and constraints

--- a/chat-widget.html
+++ b/chat-widget.html
@@ -117,6 +117,35 @@ Call or WhatsApp: 063 473 3098
 Email: info@rcdigitalcreations.co.za
 Terms & Conditions: https://www.rcdigitalcreations.co.za/terms.html
 Privacy Policy: https://www.rcdigitalcreations.co.za/privacy.html
+
+EXAMPLE WEBSITES:
+https://albertiniapavers.co.za/
+https://ccautorepairs.netlify.app/
+https://nailsbywilma.co.za/
+https://ruancoetzee.co.za/
+https://debrakke.netlify.app/
+
+SEE OUR PROJECTS AND SERVICES:
+Visit https://www.rcdigitalcreations.co.za/#services to explore current offerings and featured work. More will be added over time.
+
+FAQ:
+Q: How long does it take to build a website?
+A: Timelines vary by scope. A focused landing page can take one to two weeks. Multi-page sites typically take three to six weeks depending on content readiness and feedback speed.
+
+Q: Do you offer ongoing maintenance and updates?
+A: Yes. We provide maintenance, performance checks, and content updates. We also offer enhancements like analytics, SEO improvements, and accessibility tweaks.
+
+Q: Can you integrate custom AI chatbots into existing websites?
+A: Yes. We can integrate a site-specific chatbot trained on your content, with options for lead capture, FAQs, and booking workflows.
+
+Q: What technologies do you use?
+A: We build with HTML, CSS, JavaScript, and Python for back-end and AI integrations. We emphasize fast, accessible, and search-friendly sites.
+
+Q: Do you work with clients outside South Africa?
+A: Yes. We serve clients remotely worldwide and adapt communication to your preferred channels and time zones.
+
+Q: How do pricing and quotes work?
+A: We provide tailored quotes based on your goals, scope, and timeline. Get in touch via email or WhatsApp to start the conversation.
       </textarea>
     </div>
     <div class="p-4 border-t border-gray-200 flex space-x-3 bg-white">
