Advertisements: add autoplay modal slideshow with fullscreen view; training: update timeline, add portfolio links, services reference, FAQs

--- a/chat-widget.html
+++ b/chat-widget.html
@@ -130,7 +130,7 @@ Visit https://www.rcdigitalcreations.co.za/#services to explore current offering
 
 FAQ:
 Q: How long does it take to build a website?
-A: Timelines vary by scope. A focused landing page can take one to two weeks. Multi-page sites typically take three to six weeks depending on content readiness and feedback speed.
+A: Basic sites are typically completed within three to seven days. Timelines can change based on complexity, content readiness, and current workload.
 
 Q: Do you offer ongoing maintenance and updates?
 A: Yes. We provide maintenance, performance checks, and content updates. We also offer enhancements like analytics, SEO improvements, and accessibility tweaks.
