--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
 
           <div class="hidden md:flex items-center space-x-8">
             <a
+              href="#advertisements"
+              class="group relative inline-block px-2 py-1 text-gray-300 transition-all text-sm uppercase tracking-wider font-medium hover:shadow-[0_0_12px_rgba(59,130,246,0.6)] after:content-[''] after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-gradient-to-r after:from-brand-blue after:to-brand-purple group-hover:after:w-full after:transition-all after:duration-300 link-pop neon-hover-blue"
+              >Prices</a
+            >
+            <a
               href="#services"
               class="group relative inline-block px-2 py-1 text-gray-300 transition-all text-sm uppercase tracking-wider font-medium hover:shadow-[0_0_12px_rgba(59,130,246,0.6)] after:content-[''] after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-gradient-to-r after:from-brand-blue after:to-brand-purple group-hover:after:w-full after:transition-all after:duration-300 link-pop neon-hover-blue"
               >Services</a
@@ -147,6 +152,11 @@
         class="hidden md:hidden bg-brand-dark border-t border-gray-800 absolute w-full text-center z-50 top-20"
       >
         <div class="px-4 pt-2 pb-6 space-y-2 flex flex-col items-center">
+          <a
+            href="#advertisements"
+            class="group relative block px-3 py-3 text-base font-medium text-gray-300 hover:bg-gray-800/60 rounded-md text-center after:content-[''] after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:bg-gradient-to-r after:from-brand-blue after:to-brand-purple group-hover:after:w-3/4 after:transition-all after:duration-300 link-pop neon-hover-blue"
+            >Prices</a
+          >
           <a
             href="#services"
             class="group relative block px-3 py-3 text-base font-medium text-gray-300 hover:bg-gray-800/60 rounded-md text-center after:content-[''] after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:bg-gradient-to-r after:from-brand-blue after:to-brand-purple group-hover:after:w-3/4 after:transition-all after:duration-300 link-pop neon-hover-blue"
