Update footer social icons, add Prices link, and update De Brakke URL

--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                   Web Development • Hospitality
                 </p>
                 <a
-                  href="https://debrakke.netlify.app/"
+                  href="https://www.debrakke.co.za/"
                   target="_blank"
                   class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors"
                 >
@@ -946,7 +946,7 @@
                   info.
                 </p>
                 <a
-                  href="https://debrakke.netlify.app/"
+                  href="https://www.debrakke.co.za/"
                   target="_blank"
                   class="inline-flex items-center text-brand-blue font-semibold hover:text-white transition-colors"
                   >Visit Website
@@ -1515,6 +1515,29 @@
             <span
               class="pointer-events-none absolute top-full left-1/2 -translate-x-1/2 mt-2 px-2 py-1 rounded bg-gray-900 text-white text-xs opacity-0 translate-y-1 group-hover:opacity-100 group-hover:translate-y-0 border border-gray-700 shadow-lg"
               >Email us</span
+            >
+          </a>
+          <a
+            href="https://www.facebook.com/profile.php?id=61583951025369"
+            target="_blank"
+            rel="noopener"
+            class="group relative p-3 rounded-full bg-[#1877F2] inline-flex items-center justify-center hover:brightness-110 icon-neon icon-neon-blue"
+            aria-label="Follow us on Facebook"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              class="w-5 h-5"
+              aria-hidden="true"
+            >
+              <path
+                fill="white"
+                d="M9.101 23.691v-7.98H6.627v-3.667h2.474v-1.58c0-4.085 1.848-5.978 5.858-5.978 1.403 0 2.831.253 2.831.253v3.118h-1.354c-1.936 0-2.518 1.192-2.518 2.533v1.654h3.945l-.543 3.667h-3.402v7.98h-4.818z"
+              />
+            </svg>
+            <span
+              class="pointer-events-none absolute top-full left-1/2 -translate-x-1/2 mt-2 px-2 py-1 rounded bg-gray-900 text-white text-xs opacity-0 translate-y-1 group-hover:opacity-100 group-hover:translate-y-0 border border-gray-700 shadow-lg"
+              >Follow us on Facebook</span
             >
           </a>
         </div>
