--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="hidden md:flex items-center space-x-8">
             <a
               href="#advertisements"
-              class="group relative inline-block px-2 py-1 text-[#39ff14] transition-all text-sm uppercase tracking-wider font-medium hover:shadow-[0_0_12px_rgba(57,255,20,0.6)] after:content-[''] after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-gradient-to-r after:from-[#39ff14] after:to-green-500 group-hover:after:w-full after:transition-all after:duration-300 link-pop neon-hover-green"
+              class="group relative inline-block px-2 py-1 text-gray-300 transition-all text-sm uppercase tracking-wider font-medium hover:shadow-[0_0_12px_rgba(57,255,20,0.6)] after:content-[''] after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:bg-gradient-to-r after:from-[#39ff14] after:to-green-500 group-hover:after:w-full after:transition-all after:duration-300 link-pop neon-hover-green"
               >Prices</a
             >
             <a
@@ -154,7 +154,7 @@
         <div class="px-4 pt-2 pb-6 space-y-2 flex flex-col items-center">
           <a
             href="#advertisements"
-            class="group relative block px-3 py-3 text-base font-medium text-[#39ff14] hover:bg-gray-800/60 rounded-md text-center after:content-[''] after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:bg-gradient-to-r after:from-[#39ff14] after:to-green-500 group-hover:after:w-3/4 after:transition-all after:duration-300 link-pop neon-hover-green"
+            class="group relative block px-3 py-3 text-base font-medium text-gray-300 hover:bg-gray-800/60 rounded-md text-center after:content-[''] after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:bg-gradient-to-r after:from-[#39ff14] after:to-green-500 group-hover:after:w-3/4 after:transition-all after:duration-300 link-pop neon-hover-green"
             >Prices</a
           >
           <a
@@ -1231,14 +1231,20 @@
             "I don't just write code; I build solutions that are sustainable,
             data-driven, and designed for the future."
           </p>
-          <a
-            href="https://ruancoetzee.co.za"
-            target="_blank"
-            class="btn-neon-outline"
-          >
-            <i data-feather="user" class="mr-2 h-5 w-5"></i>
-            View Ruan's Personal Portfolio
-          </a>
+          <div class="flex flex-col sm:flex-row gap-4">
+            <a href="about.html" class="btn-neon-outline">
+              <i data-feather="info" class="mr-2 h-5 w-5"></i>
+              More about us
+            </a>
+            <a
+              href="https://ruancoetzee.co.za"
+              target="_blank"
+              class="btn-neon-outline"
+            >
+              <i data-feather="user" class="mr-2 h-5 w-5"></i>
+              View Ruan's Personal Portfolio
+            </a>
+          </div>
         </div>
         <div class="md:w-1/2 relative" data-aos="fade-left">
           <div
