--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <link rel="icon" type="image/png" href="images/RC Digital Creations.png" />
 
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="https://js.paystack.co/v1/inline.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
