added some pricing instructions for chatbot and edited pricing instructions

--- a/index.html
+++ b/index.html
@@ -245,8 +245,11 @@
             class="w-20 h-1 bg-gradient-to-r from-brand-blue to-brand-purple mx-auto rounded-full"
           ></div>
           <p class="text-gray-400 mt-4">
-            Browse current advertisements featuring services, bundles, and
-            hosting options.
+            Browse current services, bundles, and hosting options.
+            <strong>
+              Click on the "Contact" or "Get a Quote" button to ask for a quote
+              tailored to your needs.</strong
+            >
           </p>
         </div>
 
